Dumps_backups_logs/srv2/evidencias/srv2/dumps/iptables.rules
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Jan 28 18:00:26 2026
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [7514:628044]
:LOGGING - [0:0]
:PROTECAO_SSH - [0:0]
:TRAFEGO_INTERNO - [0:0]
-A INPUT -s 192.168.1.71/32 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec --limit-burst 3 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j PROTECAO_SSH
-A INPUT -s 192.168.50.0/24 -j TRAFEGO_INTERNO
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j LOGGING
-A LOGGING -m limit --limit 5/min -j LOG --log-prefix "FW_DROP: "
-A LOGGING -j DROP
-A PROTECAO_SSH -m recent --set --name SSH --mask 255.255.255.255 --rsource
-A PROTECAO_SSH -m recent --update --seconds 60 --hitcount 4 --name SSH --mask 255.255.255.255 --rsource -j LOGGING
-A PROTECAO_SSH -j ACCEPT
-A TRAFEGO_INTERNO -s 192.168.50.0/24 -j ACCEPT
COMMIT
# Completed on Wed Jan 28 18:00:26 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Jan 28 18:00:26 2026
*nat
:PREROUTING ACCEPT [224:28650]
:INPUT ACCEPT [155:22442]
:OUTPUT ACCEPT [228:25660]
:POSTROUTING ACCEPT [199:20088]
-A POSTROUTING -o enp0s8 -j MASQUERADE
COMMIT
# Completed on Wed Jan 28 18:00:26 2026
